tests/samples/negative/pattern_matching/slice_dynamic_length_missing_empty.ax
module slice_dynamic_length_missing_empty;

fn score(values: []i32) -> i32 {
    return match values {
        [_, ..] => 1,
    };
}

fn main() -> i32 {
    let values: [1]i32 = [1];
    return score(values[:]);
}
